finished dnr group changes
